--- a/app/views/aadts/_navigation.html.erb
+++ b/app/views/aadts/_navigation.html.erb
@@ -23,5 +23,24 @@
           </li>
       <% end %>
     </ul>
+    <ul class="nav pull-right">
+      <li><a href="#applicationForms" data-toggle="modal">Application Forms</a></li>
+    </ul>
+  </div>
+</div>
+
+<div id="applicationForms" class="modal hide fade">
+  <div class="modal-header">
+    <button type="close" data-dismiss="modal" class="close">&times;</button>
+    <h4>Application Forms</h4>
+  </div>
+  <div class="modal-body">
+    <ul>
+      <li><%= link_to "Security Application", @aadt.personal_detail.security_tag_application %></li>
+      <li><%= link_to "Vehicle Passcard/Sticker Application", vehicle_passcard_personal_detail_path(@aadt.personal_detail.id) %></li>
+    </ul>
+  </div>
+  <div class="modal-footer">
+    <button type="close" data-dismiss="modal" class="btn btn-inverse">Close</button>
   </div>
 </div>
