--- a/app/views/security_tag_applications/_navigation.html.erb
+++ b/app/views/security_tag_applications/_navigation.html.erb
@@ -28,7 +28,7 @@
       <% end %>
     </ul>
     <ul class="nav pull-right">
-      <li class="active"><%= link_to "Security Application", @security_tag_application %></li>
+      <li class="active"><a href="#applicationForms" data-toggle="modal">Application Forms</a></li>
     </ul>
   </div>
 </div>
@@ -43,5 +43,21 @@
   </div>
   <div class="modal-footer">
     <button type="close" class="btn btn-inverse" data-dismiss="modal">Okay, I understand</button>
+  </div>
+</div>
+
+<div id="applicationForms" class="modal hide fade">
+  <div class="modal-header">
+    <button type="close" data-dismiss="modal" class="close">&times;</button>
+    <h4>Application Forms</h4>
+  </div>
+  <div class="modal-body">
+    <ul>
+      <li><%= link_to "Security Application", @security_tag_application.personal_detail.security_tag_application %></li>
+      <li><%= link_to "Vehicle Passcard/Sticker Application", vehicle_passcard_personal_detail_path(@security_tag_application.personal_detail.id) %></li>
+    </ul>
+  </div>
+  <div class="modal-footer">
+    <button type="close" data-dismiss="modal" class="btn btn-inverse">Close</button>
   </div>
 </div>
