--- a/app/views/family_histories/edit.html.erb
+++ b/app/views/family_histories/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing family_history</h1>
+<div class="container">
+	<h1>Family History</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Show', @family_history %> |
-<%= link_to 'Back', family_histories_path %>
+	<%= link_to 'Show', @family_history %> |
+	<%= link_to 'Back', family_histories_path %>
+</div>
