--- a/app/views/personal_details/vehicle_passcard.html.erb
+++ b/app/views/personal_details/vehicle_passcard.html.erb
@@ -1,67 +1,4 @@
-<div class="navbar navbar-fixed-top navbar-inverse">
-  <div class="navbar-inner">
-    <%= link_to "7th Marine Brigade", root_path, class: "brand" %>
-    <ul class="nav">
-      <li><%= link_to "PHS", @personal_detail %></li>
-      <% if @personal_detail.aadt.aadt_effective.present? %>
-          <li><%= link_to "AADT w/ SOI", @personal_detail.aadt %></li>
-      <% else %>
-          <li><a href="#preventAadt" data-toggle="modal">AADT w/ SOI</a></li>
-      <% end %>
-      <% if @personal_detail.soi_form.postal_address.nil? || @personal_detail.soi_form.active_comsd_svc.nil? %>
-          <li><%= link_to "SOI Form 2008", edit_soi_form_path(@personal_detail.soi_form) %></li>
-      <% else %>
-          <li><%= link_to "SOI Form 2008", @personal_detail.soi_form %></li>
-      <% end %>
-      <% if @personal_detail.rid.gsis.nil? || @personal_detail.rid.tin.nil? %>
-          <li><%= link_to "RIDS", edit_rid_path(@personal_detail.rid) %></li>
-      <% else %>
-          <li>
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">RIDS<b class="caret"></b> </a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "RIDS", @personal_detail.rid %></li>
-              <% if @personal_detail.rid.rids_short.city.present? || @personal_detail.rid.rids_short.zip_code.present? %>
-                  <li><%= link_to "RIDS Short Assembly Test", @personal_detail.rid.rids_short %></li>
-              <% end %>
-            </ul>
-          </li>
-      <% end %>
-    </ul>
-    <ul class="nav pull-right">
-      <li class="active"><a href="#applicationForms" data-toggle="modal">Application Forms</a></li>
-    </ul>
-  </div>
-</div>
-
-<div id="preventAadt" class="modal hide fade">
-  <div class="modal-header">
-    <button type="close" class="close" data-dismiss="modal">&times;</button>
-    <h4><%= image_tag("warning-sign.jpg", size: "75x75") %>Cannot proceed to AADT w/ SOI</h4>
-  </div>
-  <div class="modal-body">
-    <p>It seems that your Personal History Statement is currently incomplete. Please fill up the remaining forms before going to AADT w/ SOI. Some of the details of SOI are depending on your Personal History Statement.</p>
-  </div>
-  <div class="modal-footer">
-    <button type="close" class="btn btn-inverse" data-dismiss="modal">Okay, I understand</button>
-  </div>
-</div>
-
-<div id="applicationForms" class="modal hide fade">
-  <div class="modal-header">
-    <button type="close" data-dismiss="modal" class="close">&times;</button>
-    <h4>Application Forms</h4>
-  </div>
-  <div class="modal-body">
-    <ul>
-      <li><%= link_to "Security Application", @personal_detail.security_tag_application %></li>
-      <li><%= link_to "Vehicle Passcard/Sticker Application", vehicle_passcard_personal_detail_path %></li>
-    </ul>
-  </div>
-  <div class="modal-footer">
-    <button type="close" data-dismiss="modal" class="btn btn-inverse">Close</button>
-  </div>
-</div>
-
+<%= render 'application_form_navigation' %>
 <div class="container">
   <div align="center">
     <h5>
