--- a/app/views/brothers_and_sisters/edit.html.erb
+++ b/app/views/brothers_and_sisters/edit.html.erb
@@ -1,3 +1,5 @@
-<h1>Editing brothers_and_sister</h1>
+<div class="container">
+	<h4>Edit information about <%= @brothers_and_sister.name %></h4>
 
-<%= render 'form' %>
+	<%= render 'form' %>
+</div>
