--- a/app/views/rids/_form.html.erb
+++ b/app/views/rids/_form.html.erb
@@ -62,6 +62,18 @@
     <%= f.text_field :person_to_notify %>
   </div>
   <div class="field">
+    <%= f.label :contact_of_person_to_notify %><br />
+    <%= f.text_field :contact_to_notify %>
+  </div>
+  <div class="field">
+    <%= f.label :address_of_person_to_notify %><br />
+    <%= f.text_area :address_to_notify, rows: 3 %>
+  </div>
+  <div class="field">
+    <%= f.label :relationship_with_person_to_notify %><br />
+    <%= f.text_field :relation_to_notify %>
+  </div>
+  <div class="field">
     <%= f.label :size_of_combat %><br />
     <%= f.text_field :size_of_combat %>
   </div>
