--- a/app/views/arrest_record_and_conducts/new.html.erb
+++ b/app/views/arrest_record_and_conducts/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New arrest_record_and_conduct</h1>
+<div class="container">
+	<h1>Arrest and Record Conduct</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Back', arrest_record_and_conducts_path %>
+	<%= link_to 'Back', arrest_record_and_conducts_path %>
+</div>
