--- a/app/views/general_informations/edit.html.erb
+++ b/app/views/general_informations/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing general_information</h1>
+<div class="container">
+	<h1>General Information</h1>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @general_information %> |
-<%= link_to 'Back', general_informations_path %>
+	<%= render 'form' %>
+</div>
