--- a/app/views/marital_histories/edit.html.erb
+++ b/app/views/marital_histories/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing marital_history</h1>
+<div class="container">
+	<h1>Marital History Information</h1>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @marital_history %> |
-<%= link_to 'Back', marital_histories_path %>
+	<%= render 'form' %>
+</div>	
