--- a/app/views/marital_histories/new.html.erb
+++ b/app/views/marital_histories/new.html.erb
@@ -1,5 +1,7 @@
-<h1>Marital history</h1>
+<div class="container">
+	<h1>Marital history</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Back', marital_histories_path %>
+	<%= link_to 'Back', marital_histories_path %>
+</div>
