--- a/app/views/military_histories/edit.html.erb
+++ b/app/views/military_histories/edit.html.erb
@@ -1,3 +1,5 @@
-<h1>Editing military_history</h1>
+<div class="container">
+	<h1>Military History</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
+</div>
