--- a/app/views/arrest_record_and_conducts/edit.html.erb
+++ b/app/views/arrest_record_and_conducts/edit.html.erb
@@ -1,3 +1,5 @@
-<h1>Editing Arrest record and conduct</h1>
+<div class="container">
+	<h1>Editing Arrest record and conduct</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
+</div>
