--- a/app/views/credit_reputations/edit.html.erb
+++ b/app/views/credit_reputations/edit.html.erb
@@ -1,3 +1,5 @@
-<h1>Editing Credit Reputation</h1>
+<div class="container">
+	<h1>Editing Credit Reputation</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
+</div>
