--- a/app/views/credit_reputations/new.html.erb
+++ b/app/views/credit_reputations/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New credit_reputation</h1>
+<div class="container">
+	<h1>Credit Reputation</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Back', credit_reputations_path %>
+	<%= link_to 'Back', credit_reputations_path %>
+</div>
