--- a/app/views/general_informations/new.html.erb
+++ b/app/views/general_informations/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New general_information</h1>
+<div class="container">
+	<h1>General Information</h1>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', general_informations_path %>
+	<%= render 'form' %>
+</div>
