--- a/app/views/military_histories/new.html.erb
+++ b/app/views/military_histories/new.html.erb
@@ -1,3 +1,5 @@
-<h1>New military_history</h1>
+<div class="container">
+	<h1>New Military History</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
+</div>
